@@ -3950,7 +3950,7 @@
             "url-android": null,
             "url-ios": null,
             "arch": "i386,amd64,armhf,arm64",
-            "releases": "xenial,yakkety",
+            "releases": "xenial,yakkety,zesty,artful",
             "pre-install": {
                 "all": {
                     "method": "ppa",
