@@ -2,7 +2,8 @@
     "17.10.7": {
         "fix": {
             "luminance-hdr": "general",
-            "brave": "general"
+            "brave": "general",
+            "anoise": "new-source"
         }
    },
     "17.10.6": {
