@@ -1,5 +1,6 @@
 ubuntu-mate-welcome (17.10.7) UNRELEASED; urgency=medium
 
+  * Update Ambient Noise for Zesty and Artful.
   * Update Brave and Luminance-HDR for Artful.
 
  -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 20 Jun 2017 10:32:47 +0100
